# PythonProject1

./:  .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
api/: urls.py
config/: celery.py  settings.py  urls.py
habits/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py
main/: views.py
telegram_bot/: bot.py  services.py  tasks.py  tests.py
telegram_bot/management/commands/: run_celery.py  runbot.py
users/: admin.py  models.py  serializers.py  serializers_token.py  urls.py  views.py
users/migrations/: 0001_initial.py
